Pass files directly, do not infer their locations